Replaced alert by popupOverlay

--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -597,6 +597,16 @@
                         <label for="dbSet-dbName">Name</label>
                         <input type="text" class="dbSet-dbName" placeholder="Name">
                     </div>
+<!-- PopupOverlay elements -->
+<div class="popupOverlay"></div>
+<div class="popupContent" id="error-message-popup">
+    <h3 class="header">Error</h3>
+    <p id="error-message"></p>
+    <div id="buttons-popupContent">
+        <button type="button" id="error-ok-btn">OK</button>
+    </div>
+</div>
+
                     <div class="dbSet-inputContainer" id="dbSet-descrContainer">
                         <label for="dbSet-dbDescr">Description</label>
                         <textarea class="dbSet-dbDescr" id="dbSet-dbDescr" placeholder="Description"></textarea>
