Included alertRuleName in confirmation popup

--- a/static/all-alerts.html
+++ b/static/all-alerts.html
@@ -71,7 +71,7 @@
             </div>
             <div class="popupContent">
                 <h3 class="header">Confirmation</h3>
-                <p>Are you sure you want to delete this Alert?</p>
+                <p id="delete-alert-name">Are you sure you want to delete this Alert?</p>
                 <button type="button" id="cancel-btn">Cancel</button>
                 <button type="button" id="delete-btn">Delete</button>
             </div>
