--- a/static/live-tail.html
+++ b/static/live-tail.html
@@ -72,12 +72,12 @@
                                             city=Boston | stats count AS Count BY weekday | where Count / 2 > 6 OR weekday = "Saturday"
                                             '>
                     </i>
-                    <input class="form-control" id="filter-input"
+                    <input class="form-control filter-input" id="filter-input"
                         placeholder="Enter your SPL query here, or click the 'i' icon for examples" type="text">
                     <span class="clear-icon" id="clearInput" title="Clear"></span>
                 </div>
                 <div class="dropdown">
-                    <button class="btn dropdown-toggle" type="button" id="query-language-btn" data-toggle="dropdown"
+                    <button class="btn dropdown-toggle query-language-btn" type="button" id="query-language-btn" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false" data-bs-toggle="dropdown" title="Select Query Type">
                         <span>Splunk QL</span>
                         <img class="dropdown-arrow orange" src="assets/arrow-btn.svg">
@@ -90,7 +90,7 @@
                     </div>
                 </div>
                 <div class="dropdown">
-                    <button class="btn dropdown-toggle" type="button" id="index-btn" data-toggle="dropdown"
+                    <button class="btn dropdown-toggle index-btn" type="button" id="index-btn" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false" data-bs-toggle="dropdown"
                         title="Index Name to search on">
                         <span>Index</span>
@@ -102,7 +102,7 @@
                     </div>
                 </div>
                 <div class="text-end">
-                    <button class="btn" id="live-tail-btn" title="Live Tail">Live Tail</button>
+                    <button class="btn live-tail-btn" id="live-tail-btn" title="Live Tail">Live Tail</button>
                 </div>
             </div>
 
@@ -110,18 +110,18 @@
                 <div id="views-container">
                     <div class="d-flex justify-content-end">
                         <div class="btn-group mx-3" role="group" id="log-view">
-                            <button class="btn" id="log-opt-single-btn">
+                            <button class="btn log-opt-single-btn" id="log-opt-single-btn">
                                 <span class="single-line-icon" title="Single Line Display View"></span>
                             </button>
-                            <button class="btn" id="log-opt-multi-btn">
+                            <button class="btn log-opt-multi-btn" id="log-opt-multi-btn">
                                 <span class="multi-line-icon" title="Wrap Line Display View"></span>
                             </button>
-                            <button class="btn" id="log-opt-table-btn">
+                            <button class="btn log-opt-table-btn" id="log-opt-table-btn">
                                 <span class="table-view-icon" title="Table Display View"></span>
                             </button>
                         </div>
                         <div class="dropdown">
-                            <button class="btn dropdown-toggle" title="Select field names to display" type="button"
+                            <button class="btn dropdown-toggle avail-fields-btn" title="Select field names to display" type="button"
                                 id="avail-fields-btn" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
                                 data-bs-toggle="dropdown">
                                 <i class="fa-solid fa-list-check" title="Select field names to display"></i>&nbsp;
