Fix : code cleanup

--- a/static/test-data.html
+++ b/static/test-data.html
@@ -51,7 +51,7 @@
                             <div class="section-button"><a href="./cluster-stats.html">Cluster Stats</a></div>
                             <div class="section-button"><a href="./org-settings.html">Settings</a></div>
                             <div class="section-button active"><a href="./test-data.html">Test Data</a></div>
-                            <div class="section-button"><a href="./application-version.html">Application Version</a>
+                            <div class="section-button"><a href="./application-version.html">App Version</a>
                             </div>
                         </div>
                     </div>
