--- a/static/application-version.html
+++ b/static/application-version.html
@@ -52,7 +52,7 @@
                             <div class="section-button"><a href="./cluster-stats.html">Cluster Stats</a></div>
                             <div class="section-button"><a href="./org-settings.html">Settings</a></div>
                             <div class="section-button"><a href="./test-data.html">Test Data</a></div>
-                            <div class="section-button active"><a href="./application-version.html">Application
+                            <div class="section-button active"><a href="./application-version.html">App
                                     Version</a></div>
                         </div>
                     </div>
@@ -61,7 +61,6 @@
                 <div class="myOrg-inner-container">
                     <div>
                         <div>
-                            <h3>Application Version:</h3>
                             <p id="versionInfo">Loading...</p>
                         </div>
                     </div>
