Fix: App Version changed to Version in multiple files

--- a/static/cluster-stats.html
+++ b/static/cluster-stats.html
@@ -53,7 +53,7 @@
                             <div class="section-button active"><a href="./cluster-stats.html">Cluster Stats</a></div>
                             <div class="section-button"><a href="./org-settings.html">Settings</a></div>
                             <div class="section-button"><a href="./test-data.html">Test Data</a></div>
-                            <div class="section-button"><a href="./application-version.html">App Version</a>
+                            <div class="section-button"><a href="./application-version.html">Version</a>
                             </div>
                         </div>
                     </div>
