--- a/static/application-version.html
+++ b/static/application-version.html
@@ -52,7 +52,7 @@
                             <div class="section-button"><a href="./cluster-stats.html">Cluster Stats</a></div>
                             <div class="section-button"><a href="./org-settings.html">Settings</a></div>
                             <div class="section-button"><a href="./test-data.html">Test Data</a></div>
-                            <div class="section-button active"><a href="./application-version.html">App
+                            <div class="section-button active"><a href="./application-version.html">
                                     Version</a></div>
                         </div>
                     </div>
