--- a/static/org-settings.html
+++ b/static/org-settings.html
@@ -52,8 +52,7 @@
                             <div class="section-button"><a href="./cluster-stats.html">Cluster Stats</a></div>
                             <div class="section-button active"><a href="./org-settings.html">Settings</a></div>
                             <div class="section-button"><a href="./test-data.html">Test Data</a></div>
-                            <div class="section-button"><a href="./application-version.html">App
-                                    Version</a></div>
+                            <div class="section-button"><a href="./application-version.html">Version</a></div>
                         </div>
                     </div>
                 </div>
