--- a/static/index.html
+++ b/static/index.html
@@ -270,12 +270,22 @@
                     </div>
                 </div>
             </div>
-
-            <div id="empty-response"></div>
-
-            <div id="logs-result-container">
-                <div id="LogResultsGrid" class="LogResultsGrid ag-theme-mycustomtheme"></div>
+            <div id="custom-chart-tab" class="custom-code-tab custom-chart-tab">
+                <ul class="tab-chart-list">
+                    <li class="tab-li" id="tab-chart-title"><a href="#tabs-chart" class="custom-query-builder">Time Chart</a>
+                    </li>
+                    <li class="tab-li" id="tab-table-title"><a href="#logs-result-container" class="custom-query-builder">Table</a>
+                    </li>
+                </ul>
+                <div id="tabs-chart" class="tab-content-size">
+                    <div id="columnChart" class="columnChart"></div>
+                </div>
+                <div id="logs-result-container" class="tab-content-size">
+                    <div id="LogResultsGrid" class="LogResultsGrid ag-theme-mycustomtheme"></div>
+                </div>
             </div>
+            <div id="empty-response"></div>
+            
             <div id="agg-result-container">
                 <div id="measureAggGrid" class="measureAggGrid ag-theme-mycustomtheme"></div>
             </div>
@@ -382,6 +392,8 @@
     <script src="./js/log-search.js?cb=1_1_10"></script>
     <script src="./js/dashboard-from-logs.js?cb=1_1_10"></script>
     <script src="./js/query-builder.js"></script>
+    <script src="./js/lib/echarts.min.js"></script>
+
 </body>
 
 </html>
