--- a/static/index.html
+++ b/static/index.html
@@ -278,7 +278,7 @@
                     </li>
                 </ul>
                 <div id="tabs-chart" class="tab-content-size">
-                    <div id="columnChart" class="columnChart"></div>
+                    <div id="columnChart" class="column-chart"></div>
                 </div>
                 <div id="logs-result-container" class="tab-content-size">
                     <div id="LogResultsGrid" class="LogResultsGrid ag-theme-mycustomtheme"></div>
