--- a/static/cluster-stats.html
+++ b/static/cluster-stats.html
@@ -4,7 +4,7 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-5SBJC04YFB"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'G-5SBJC04YFB');
@@ -53,6 +53,8 @@
                             <div class="section-button active"><a href="./cluster-stats.html">Cluster Stats</a></div>
                             <div class="section-button"><a href="./org-settings.html">Settings</a></div>
                             <div class="section-button"><a href="./test-data.html">Test Data</a></div>
+                            <div class="section-button"><a href="./application-version.html">Version</a>
+                            </div>
                         </div>
                     </div>
                 </div>
