--- a/static/test-data.html
+++ b/static/test-data.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5SBJC04YFB"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-    
-        gtag('config', 'G-5SBJC04YFB');
-    </script>
-    
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5SBJC04YFB"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-5SBJC04YFB');
+</script>
+
 <head>
     <meta charset="UTF-8">
     <title>SigLens</title>
@@ -51,6 +51,8 @@
                             <div class="section-button"><a href="./cluster-stats.html">Cluster Stats</a></div>
                             <div class="section-button"><a href="./org-settings.html">Settings</a></div>
                             <div class="section-button active"><a href="./test-data.html">Test Data</a></div>
+                            <div class="section-button"><a href="./application-version.html">Version</a>
+                            </div>
                         </div>
                     </div>
                 </div>
