--- a/static/index.html
+++ b/static/index.html
@@ -225,7 +225,7 @@
             
             <div id="custom-chart-tab" class="custom-code-tab custom-chart-tab">
                 <ul class="tab-chart-list">
-                    <li class="tab-li" id="tab-chart-title"><a href="#tabs-chart" class="custom-query-builder">Time Chart</a>
+                    <li class="tab-li" id="tab-chart-title"><a href="#tabs-chart" class="custom-query-builder">Visualization</a>
                     </li>
                     <li class="tab-li" id="tab-table-title"><a href="#logs-result-container" class="custom-query-builder">Table</a>
                     </li>
