--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -45,7 +45,7 @@
 
 <body data-theme="light" class="classBody">
     <div id="app-container">
-        <div id="app-side-nav" class="active">
+        <div id="app-side-nav">
         </div>
         <div id="new-dashboard">
             <div class="header-container">
