--- a/static/dependency-graph.html
+++ b/static/dependency-graph.html
@@ -46,7 +46,7 @@
     </div>
     <div id="app-container">
 
-        <div id="app-side-nav" class="active">
+        <div id="app-side-nav">
         </div>
 
         <div id="dashboard" class="p-20">
