--- a/static/index.html
+++ b/static/index.html
@@ -47,7 +47,7 @@
     </div>
     <div id="app-container">
 
-        <div id="app-side-nav" class="active">
+        <div id="app-side-nav">
         </div>
 
         <div id="dashboard" class="dashboard-box">
