--- a/static/service-health-overview.html
+++ b/static/service-health-overview.html
@@ -38,7 +38,7 @@
 </head>
 <body data-theme="light">
     <div id="cstats-app-container">
-        <div id="app-side-nav" class="active">
+        <div id="app-side-nav">
         </div>
         <div id="empty-response"></div>
         <div id="app-content-area">
