--- a/static/cluster-stats.html
+++ b/static/cluster-stats.html
@@ -41,7 +41,7 @@
 
 <body data-theme="light">
     <div id="cstats-app-container">
-        <div id="app-side-nav" class="active">
+        <div id="app-side-nav">
         </div>
         <div id="empty-response"></div>
         <div id="app-content-area">
