--- a/static/dashboards-home.html
+++ b/static/dashboards-home.html
@@ -40,7 +40,7 @@
 
 <body data-theme="light">
     <div id="app-container">
-        <div id="app-side-nav" class="active">
+        <div id="app-side-nav">
         </div>
         <div id="dashboard" class="launch-dashboard">
             <div id="db-search-container">
