--- a/static/live-tail.html
+++ b/static/live-tail.html
@@ -39,7 +39,7 @@
 
 <body data-theme="light">
     <div id="app-container">
-        <div id="app-side-nav" class="active">
+        <div id="app-side-nav">
         </div>
 
         <div id="dashboard">
