--- a/static/minion-searches.html
+++ b/static/minion-searches.html
@@ -41,7 +41,7 @@
 <body data-theme="light">
     <div id="app-container">
 
-        <div id="app-side-nav" class="active">
+        <div id="app-side-nav">
         </div>
 
         <div id="dashboard">
