--- a/static/search-traces.html
+++ b/static/search-traces.html
@@ -48,7 +48,7 @@
     </div>
     <div id="app-container">
 
-        <div id="app-side-nav" class="active">
+        <div id="app-side-nav">
         </div>
         <div id="download-trace"></div>
         <div id="dashboard" class="p-20 pb-0">
