--- a/static/alert-details.html
+++ b/static/alert-details.html
@@ -45,13 +45,6 @@
 
         <div id="alerting">
             <div class="alerts-nav-tab">
-                <div>
-                    <h1 class="myOrg-heading">Alerting</h1>
-                    <div class="section-buttons">
-                        <div class="section-button active"><a href="./all-alerts.html">Alert rules</a></div>
-                        <div class="section-button"><a href="./contacts.html">Contact points</a></div>
-                    </div>
-                </div>
             </div>
             <div id="alert-details">
                 <div class="d-flex align-items-end justify-content-between">
@@ -118,6 +111,7 @@
     <script src="./js/event-handlers.js?cb=1_1_10"></script>
     <script src="./js/date-picker.js?cb=1_1_10"></script>
     <script src="./js/point-click-search.js?cb=1_1_10"></script>
+    <script src="./component/upper-navbar/upper-navbar.js"></script>
     <script src="./js/alert.js?cb=1_1_10"></script>
 </body>
 
