--- a/static/alert.html
+++ b/static/alert.html
@@ -45,13 +45,6 @@
 
         <div id="alerting">
             <div class="alerts-nav-tab">
-                <div>
-                    <h1 class="myOrg-heading">Alerting</h1>
-                    <div class="section-buttons">
-                        <div class="section-button active"><a href="./all-alerts.html">Alert rules</a></div>
-                        <div class="section-button"><a href="./contacts.html">Contact points</a></div>
-                    </div>
-                </div>
             </div>
             <div class="upper-header">
                 <p class="caption">Rules that determine whether an alert will fire
@@ -263,6 +256,8 @@
     <script src="./js/point-click-search.js?cb=1_1_10"></script>
     <script src="./js/contacts.js?cb=1_1_10"></script>
     <script src="./js/alert.js?cb=1_1_10"></script>
+    <script src="./component/upper-navbar/upper-navbar.js"></script>
+
 </body>
 
 </html>
