--- a/static/cluster-stats.html
+++ b/static/cluster-stats.html
@@ -47,16 +47,6 @@
         <div id="app-content-area">
             <div class="cstats-data-container myOrg-container">
                 <div class="org-nav-tab">
-                    <div>
-                        <h1 class="myOrg-heading">My Org</h1>
-                        <div class="section-buttons">
-                            <div class="section-button active"><a href="./cluster-stats.html">Cluster Stats</a></div>
-                            <div class="section-button"><a href="./org-settings.html">Settings</a></div>
-                            <div class="section-button"><a href="./test-data.html">Test Data</a></div>
-                            <div class="section-button"><a href="./application-version.html">Version</a>
-                            </div>
-                        </div>
-                    </div>
                 </div>
                 <div class="myOrg-inner-container">
                     <div class="usage-stats-header">
@@ -152,6 +142,8 @@
     <script src="./js/index.js?cb=1_1_10"></script>
     <script src="./js/point-click-search.js?cb=1_1_10"></script>
     <script src="./js/lib/chart.umd.min.js"></script>
+    <script src="./component/upper-navbar/upper-navbar.js"></script>
+
 </body>
 
 </html>
