--- a/static/contacts.html
+++ b/static/contacts.html
@@ -46,13 +46,6 @@
 
         <div id="alerting">
             <div class="alerts-nav-tab">
-                <div>
-                    <h1 class="myOrg-heading">Alerting</h1>
-                    <div class="section-buttons">
-                        <div class="section-button"><a href="./all-alerts.html">Alert rules</a></div>
-                        <div class="section-button active"><a href="./contacts.html">Contact points</a></div>
-                    </div>
-                </div>
             </div>
             <div class="upper-header">
                 <p class="caption">Determine how to notify contact points when an alert fires
@@ -116,6 +109,8 @@
     <script src="./js/search.js?cb=1_1_10"></script>
     <script src="./js/point-click-search.js?cb=1_1_10"></script>
     <script src="./js/contacts.js?cb=1_1_10"></script>
+    <script src="./component/upper-navbar/upper-navbar.js"></script>
+
 </body>
 
 </html>
