--- a/static/search-traces.html
+++ b/static/search-traces.html
@@ -53,14 +53,6 @@
         <div id="download-trace"></div>
         <div id="dashboard" class="p-20 pb-0">
             <div class="subsection-navbar">
-                <div>
-                    <h1 class="myOrg-heading">Tracing</h1>
-                    <div class="subsection-buttons">
-                        <div class="section-button"><a href="./service-health.html">Service Health</a></div>
-                        <div class="section-button active"><a href="./search-traces.html">Search Traces</a></div>
-                        <div class="section-button"><a href="./dependency-graph.html">Dependency Graph</a></div>
-                    </div>
-                </div>
             </div>
             <div class="page-block">
                 <div class="search">
@@ -140,6 +132,8 @@
     <script src="./component/download/download.js"></script>
     <script src="./component/time-picker/time-picker.js"></script>
     <script src="./js/lib/echarts.min.js"></script>
+    <script src="./component/upper-navbar/upper-navbar.js"></script>
+
 </body>
 
 </html>
