--- a/static/test-data.html
+++ b/static/test-data.html
@@ -45,16 +45,6 @@
         <div class="myOrg">
             <div class="myOrg-container">
                 <div class="org-nav-tab">
-                    <div>
-                        <h1 class="myOrg-heading">My Org</h1>
-                        <div class="section-buttons">
-                            <div class="section-button"><a href="./cluster-stats.html">Cluster Stats</a></div>
-                            <div class="section-button"><a href="./org-settings.html">Settings</a></div>
-                            <div class="section-button active"><a href="./test-data.html">Test Data</a></div>
-                            <div class="section-button"><a href="./application-version.html">Version</a>
-                            </div>
-                        </div>
-                    </div>
                 </div>
 
                 <div class="myOrg-inner-container">
@@ -98,6 +88,8 @@
     <script src="./js/index.js?cb=1_1_10"></script>
     <script src="./js/point-click-search.js?cb=1_1_10"></script>
     <script src="./js/test-data.js"></script>
+    <script src="./component/upper-navbar/upper-navbar.js"></script>
+
 </body>
 
 </html>
