--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -642,6 +642,7 @@
     <script src="./js/dashboard.js?cb=1_1_10"></script>
     <script src="./js/edit-panel-screen.js?cb=1_1_10"></script>
     <script src="./js/dashboard-logs-results-grid.js?cb=1_1_10"></script>
+    <script src="./component/upper-navbar/upper-navbar.js"></script>
 </body>
 
 </html>
