Added more units to Number Panel

--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -469,6 +469,15 @@
                         <div class="data-options inner-options" data-index="5">
                             <li>PB</li>
                         </div>
+                        <div class="data-options inner-options" data-index="6">
+                            <li>EB</li>
+                        </div>
+                        <div class="data-options inner-options" data-index="7">
+                            <li>ZB</li>
+                        </div>
+                        <div class="data-options inner-options" data-index="8">
+                            <li>YB</li>
+                        </div>
                     </ul>
                     <ul class="editPanelMenu editPanelMenu-inner-options" id="throughputOptionsDropDown">
                         <div class="throughput-options inner-options" data-index="0">
