--- a/static/live-tail.html
+++ b/static/live-tail.html
@@ -147,7 +147,7 @@
             <div id="logs-result-container" class="live-tail-logs-container">
                 <div id="LogResultsGrid" class="LogResultsGrid ag-theme-mycustomtheme"></div>
             </div>
-            <div id="agg-result-container">
+            <div id="agg-result-container" class="live-tail-logs-container">
                 <div id="measureAggGrid" class="measureAggGrid ag-theme-mycustomtheme"></div>
             </div>
 
