--- a/static/search-traces.html
+++ b/static/search-traces.html
@@ -69,7 +69,7 @@
                     </div>
                     <div class="input-box">
                         <span>Tags</span>
-                        <input class="form-control" id="tags-input" placeholder="" type="text">
+                        <input class="form-control" id="tags-input" placeholder="http.method=GET" type="text">
                     </div>
                     <div class="dropdown lookback" id="lookback">
                         <span>Lookback</span>
