Setup procedure for html template hooks

--- a/static/dashboards-home.html
+++ b/static/dashboards-home.html
@@ -42,6 +42,7 @@
     <div id="app-container">
         <div id="app-side-nav">
         </div>
+        {{.HelloHtml | safeHTML}}
         <div id="dashboard" class="launch-dashboard">
             <div id="db-search-container">
                 <div>
