Setup template for linking to ent-only html page

--- a/static/dashboards-home.html
+++ b/static/dashboards-home.html
@@ -43,6 +43,7 @@
         <div id="app-side-nav">
         </div>
         {{.HelloHtml | safeHTML}}
+        {{.LinkToOtherPageHtml | safeHTML}}
         <div id="dashboard" class="launch-dashboard">
             <div id="db-search-container">
                 <div>
