--- a/static/trace.html
+++ b/static/trace.html
@@ -34,7 +34,7 @@
     <script src="./js/lib/popper.min.js"></script>
     <script src="./js/lib/bootstrap.bundle.min.js"></script>
     <script src="./js/lib/ag-grid-community.min.noStyle.js"></script>
-    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="./js/lib/d3.v7.min.js"></script>
     <title>SigLens</title>
 </head>
 <body data-theme="light">
