--- a/static/org-settings.html
+++ b/static/org-settings.html
@@ -36,6 +36,7 @@
     <script src="./js/settings.js"></script>
     <script src="./js/lib/bootstrap.bundle.min.js"></script>
     <script src="./js/lib/ag-grid-community.min.noStyle.js"></script>
+    {{.RunOktaSignin | safeHTML}}
 </head>
 
 <body data-theme="light">
@@ -46,6 +47,7 @@
         <div class="myOrg">
             <div class="myOrg-container">
                 <div class="org-nav-tab">
+                    {{.LogoutButton | safeHTML}}
                 </div>
 
                 <div class="myOrg-inner-container">
@@ -56,14 +58,14 @@
                         <table id="org-settings-table">
                             <tr>
                                 <th>Organization Name</th>
-                                <td id="orgName">SigLens</td>
+                                {{.OrgName | safeHTML}}
                             </tr>
                             <tr>
                                 <th>Retention</th>
-                                <td id="retention-days-value">4 days</td>
+                                {{.RetentionDays | safeHTML}}
                             </tr>
                         </table>
-
+                        {{.ExtraOrgSettings | safeHTML}}
                     </div>
                 </div>
             </div>
@@ -86,6 +88,10 @@
     <script src="./js/index.js?cb=1_1_10"></script>
     <script src="./component/upper-navbar/upper-navbar.js"></script>
     <script src="./js/settings.js?cb=1_1_10"></script>
+    {{.ImportExtraOrgSettingsScripts | safeHTML}}
+
+    {{.RunRbacAuthCheck | safeHTML}}
+    {{.RunSaasAuthCheck | safeHTML}}
 
 </body>
 
