--- a/static/org-settings.html
+++ b/static/org-settings.html
@@ -33,7 +33,6 @@
     <script src="./js/lib/moment.min.js"></script>
     <script src="./js/lib/date_fns.min.js"></script>
     <script src="./js/lib/popper.min.js"></script>
-    <script src="./js/settings.js"></script>
     <script src="./js/lib/bootstrap.bundle.min.js"></script>
     <script src="./js/lib/ag-grid-community.min.noStyle.js"></script>
 </head>
@@ -62,8 +61,42 @@
                                 <th>Retention</th>
                                 <td id="retention-days-value">4 days</td>
                             </tr>
+                            <tr>
+                                <th>Persistent Queries</th>
+                                <td>
+                                    <div class="dropdown">
+                                        <button class="btn dropdown-toggle" type="button" id="contact-types"
+                                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+                                            data-bs-toggle="dropdown">
+                                            <span style="color: var(--health-stats-value-text-color); margin-left: -10px;">Enabled</span>
+                                            <img class="dropdown-arrow orange" src="assets/arrow-btn.svg">
+                                            <img class="dropdown-arrow blue" src="assets/up-arrow-btn-light-theme.svg">
+                                        </button>
+                                        <div class="dropdown-menu box-shadow contact-options">
+                                            <li id="option-0" class="contact-option active">Enabled</li>
+                                            <li id="option-1" class="contact-option">Disabled</li>
+                                        </div>
+                                    </div>
+                                </td>
+                            </tr>
                         </table>
+                        
 
+                    </div>
+                </div>
+                <div class="popupOverlay">
+                </div>
+                <div class="popupContent" id="disable-pqs-prompt">
+                    <div class="disable-dialog">
+                        <h3 class="header">Disable Persistant Queries</h3>
+                        <p>
+                            Disabling persistant queries may affect your query performance. <strong
+                                id="contact-name-placeholder-delete-dialog"></strong>
+                        </p>
+                        <div class="mt-4">
+                            <button type="button" class="cancelqButton" id="cancel-disable-pqs">Cancel</button>
+                            <button type="button" id="disable-pqs" class="saveqButton">Ok</button>
+                        </div>
                     </div>
                 </div>
             </div>
